--- a/css/Ipad-landscape.css
+++ b/css/Ipad-landscape.css
@@ -98,7 +98,7 @@ height: 200px;
 
 .thumb {
 height: 200px;
-border: 8px solid #4431a4;
+border: 8px solid #124b8c;
 box-shadow: 0px 0px 8px rgba(0,0,0,.3);
 margin: 20px 20px 20px 1px;
 max-width: 100%;
