--- a/css/ipad.css
+++ b/css/ipad.css
@@ -112,7 +112,7 @@ height: 200px;
 
 .thumb {
 height: 200px;
-border: 8px solid #4431a4;
+border: 8px solid #124b8c;
 box-shadow: 0px 0px 8px rgba(0,0,0,.3);
 margin: 20px 20px 20px 1px;
 max-width: 100%;
@@ -230,95 +230,6 @@ margin: 20px 20px 20px 20px;
     display:flex;
 }
 
-.thumb {
-height: 250px;
-border: 8px solid #4431a4;
-box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-margin: 20px  33px 20px 20px;
-}
-
-.thumb:hover{
-    height: 250px;
-border: 8px solid #6ba6da;
-box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-margin: 20px 33px 20px 20px;
-}
-
-
-
-#thumblist {
-  text-align: center;
-  border: 4px solid #4431a4;
-  border-radius: 8px;
-  padding: 0;
-  background: rgba(127, 127, 127, .8);
-}
-
-#thumblist img {
-  border-radius: 4px;
-}
-
-
-.description {
-  color: white;
-  text-decoration: none;
-}
-/** relevant CSS Below **/
-
-.lightbox {
-  display: none;
-  /**sets the default display to hide the lightbox until it's the :target**/
-  
-  position: fixed;
-  /**the rest of this styling makes the lightbox full screen when selected**/
-  
-  z-index: 999;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, .8);
-}
-
-.lightbox img {
-    min-width: 93%;
-    min-height: 49%;
-    text-align: center;
-    margin-top: 32%;
-    border: 8px solid #4431a4;
-}
-
-.lightbox img:hover {
-  /**sets the styling of the image in the lightbox**/
-  
-  max-width: 80%;
-  max-height: 90%;
-  text-align: center;
-  margin-top: 2%;
-  border: 8px solid #6ba6da;
-  
-}
-
-.lightbox:target {
-  /**this is where the magic happens. makes the lightbox display when it's the target of a clickable link**/
-  
-  outline: none;
-  display: block;
-  background-color: lightgrey;
-}
-
-#container {
-    margin-left: 20%;
-}
-
-.socialmedia1{
-    display:none;
-}
-
-.socialmedia{
-    display:flex;
-}
 
 footer { background-color:#124b8c; max-height:320px; font-family: 'Open Sans', sans-serif;   }
 .footer-col { margin-top:13px; }
@@ -403,7 +314,7 @@ footer { background-color:#124b8c; max-height:320px; font-family: 'Open Sans', s
 }
 
 .active2:hover {
-border-bottom: 4px solid purple;
+border-bottom: 4px solid #68a6da;
   padding: 4px 0; 
     
 }
