--- a/landscape.css
+++ b/landscape.css
@@ -109,7 +109,7 @@ carousel.less:193
 
 .thumb {
 height: 250px;
-border: 8px solid #4431a4;
+border: 8px solid #124b8c;
 box-shadow: 0px 0px 8px rgba(0,0,0,.3);
 margin: 20px  33px 20px 20px;
 }
