Scroll Functie aangepast

--- a/css/mobile-landscape.css
+++ b/css/mobile-landscape.css
@@ -383,7 +383,7 @@ body {
     min-height: 300px; 
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -397,7 +397,7 @@ body {
     min-height: 300px; 
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -411,7 +411,7 @@ body {
     min-height: 300px; 
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
