--- a/css/Ipad-landscape.css
+++ b/css/Ipad-landscape.css
@@ -250,7 +250,7 @@ margin: 20px 20px 20px 20px;
     min-height: 400px; 
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -264,7 +264,7 @@ margin: 20px 20px 20px 20px;
     min-height: 400px; 
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -278,7 +278,7 @@ margin: 20px 20px 20px 20px;
     min-height: 400px; 
 
     /* Create the parallax scrolling effect */
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
