--- a/landscape.css
+++ b/landscape.css
@@ -106,125 +106,12 @@ carousel.less:193
     margin-left: 8.7%;
 }
 
-
-.thumb {
-height: 250px;
-border: 8px solid #124b8c;
-box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-margin: 20px  33px 20px 20px;
-}
-
-.thumb:hover{
-    height: 250px;
-border: 8px solid #6ba6da;
-box-shadow: 0px 0px 8px rgba(0,0,0,.3);
-margin: 20px 33px 20px 20px;
-}
-
-
-
-#thumblist {
-  text-align: center;
-  border: 4px solid #4431a4;
-  border-radius: 8px;
-  padding: 0;
-  background: rgba(127, 127, 127, .8);
-}
-
-#thumblist img {
-  border-radius: 4px;
-}
-
-
-.description {
-  color: white;
-  text-decoration: none;
-}
-/** relevant CSS Below **/
-
-.lightbox {
-  display: none;
-  /**sets the default display to hide the lightbox until it's the :target**/
-  
-  position: fixed;
-  /**the rest of this styling makes the lightbox full screen when selected**/
-  
-  z-index: 999;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  top: 0;
-  left: 0;
-  background:lightgrey;
-}
-
-.lightbox img {
-  /**sets the styling of the image in the lightbox**/
-  
-  min-width: 70%;
-  min-height: 90%;
-  text-align: center;
-  margin-top: 1%;
-  border: 8px solid #4431a4;
-}
-
-.lightbox img:hover {
-  /**sets the styling of the image in the lightbox**/
-  
-  max-width: 80%;
-  max-height: 90%;
-  text-align: center;
-  margin-top: 2%;
-  border: 8px solid #6ba6da;
-  
-}
-
-.lightbox:target {
-  /**this is where the magic happens. makes the lightbox display when it's the target of a clickable link**/
-  
-  outline: none;
-  display: block;
-}
-
-.previous {
-  /**styling the left arrow**/
-  
-  position: fixed;
-  left: 4px;
-  top: 40%;
-  width: 40px;
-  font-size: 40px;
-  
-}
-
-.exit {
-  /**styling the exit button**/
-  
-  position: fixed;
-  top: 4px;
-  right: 4px;
-  width: 40px;
-  font-size: 40px;
-  
-}
-
-.next {
-  /**styling the right arrow**/
-  
-  position: fixed;
-  right: 4px;
-  top: 40%;
-  width: 40px;
-  font-size: 40px;
-  
-}
-
 .bg-img1 {
     /* The image used */
-    background-image: url("../images/3%20in%201%20pakket.jpg");
+    background-image: url("../Sync-Development/images/3%20in%201%20pakket.jpg");
 
     /* Set a specific height */
-    min-height: 520px; 
+    min-height: 450px; 
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -232,20 +119,6 @@ margin: 20px 33px 20px 20px;
     background-repeat: no-repeat;
     background-size: cover;
 }
-
-.bg-img2 {
-    /* The image used */
-    background-image: url("../images/Pakketten.png");
-
-    /* Set a specific height */
-    min-height: 500px; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}  
 
 .bg-img3 {
     /* The image used */
