--- a/landscape.css
+++ b/landscape.css
@@ -108,7 +108,7 @@ carousel.less:193
 
 .bg-img1 {
     /* The image used */
-    background-image: url("../Sync-Development/images/3%20in%201%20pakket.jpg");
+    background-image: url("../images/3%20in%201%20pakket.jpg");
 
     /* Set a specific height */
     min-height: 450px; 
