--- a/css/Ipad-landscape.css
+++ b/css/Ipad-landscape.css
@@ -111,7 +111,7 @@ height: 200px;
 
 .bg-img1 {
     /* The image used */
-    background-image: url("../images/3%20in%201%20pakket.jpg");
+    background-image: url("../images/Sync_Development_Alphen_ad_Rijn_3_in_1_pakket_banner.jpg");
 
     /* Set a specific height */
     min-height: 600px; 
@@ -123,23 +123,9 @@ height: 200px;
     background-size: cover;
 }
 
-.bg-img2 {
-    /* The image used */
-    background-image: url("../images/Pakketten.png");
-
-    /* Set a specific height */
-    min-height: 400px; 
-
-    /* Create the parallax scrolling effect */
-    background-attachment: scroll;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}  
-
 .bg-img3 {
     /* The image used */
-    background-image: url("../images/Laptop.jpg");
+    background-image: url("../images/Sync_Development_Alphen_ad_Rijn_Laptop_mobiel_computer.jpg");
 
     /* Set a specific height */
     min-height: 400px; 
@@ -153,7 +139,7 @@ height: 200px;
 
 .bg-img4 {
     /* The image used */
-    background-image: url("../images/Seo-2.jpg");
+    background-image: url("../images/Sync_Development_Alphen_ad_Rijn_Seo.jpg");
 
     /* Set a specific height */
     min-height: 400px; 
@@ -167,7 +153,7 @@ height: 200px;
 
 .bg-img5 {
     /* The image used */
-    background-image: url("../images/Stap%20voor%20stap.jpg");
+    background-image: url("../images/Sync_Development_Alphen_ad_Rijn_Werkwijze.jpg");
 
     /* Set a specific height */
     min-height: 500px; 
