--- a/bootstrap.css
+++ b/bootstrap.css
@@ -6942,7 +6942,7 @@ footer { background-color:#124b8c; max-height:320px; font-family: 'Open Sans', s
   position: absolute;
   height: 4px;
   width: 90%;
-  background: #4431a4;
+  background: #124b8c;
   border-radius: 9px;
   opacity: 1;
   left: 0;
