--- a/css/mobile-landscape.css
+++ b/css/mobile-landscape.css
@@ -176,7 +176,7 @@ footer { background-color:#4431a4; max-height:320px; font-family: 'Open Sans', s
 }
 
 .active2:hover {
-border-bottom: 4px solid purple;
+border-bottom: 4px solid #428bca;
   padding: 4px 0; 
     
 }
