--- a/mobile.css
+++ b/mobile.css
@@ -245,7 +245,7 @@ body {
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
-    border-color: #4431a4;
+    border-color: #124b8c;
 }
 
 .flag2{
