twitter button wegegehaald

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -7292,3 +7292,11 @@ footer { background-color:#124b8c; max-height:320px; font-family: 'Open Sans', s
     margin-left: -15px;
     margin-left: 8%;
 }
+
+.likeknop{
+    margin-left:5%;
+}
+
+
+
+
