--- a/css/mobile-landscape.css
+++ b/css/mobile-landscape.css
@@ -251,7 +251,7 @@ body {
 
 .bg-img1 {
     /* The image used */
-    background-image: url("../images/Sync-Development-Alphen-ad-Rijn-3-in-1-pakket-banner.jpg");
+    background-image: url("../images/Sync-Development-Alphen-ad-Rijn-3-in-1-pakket-banner.svg");
 
     /* Set a specific height */
     min-height: 300px;
@@ -293,7 +293,7 @@ body {
 
 .bg-img5 {
     /* The image used */
-    background-image: url("../images/Sync-Development-Alphen-ad-Rijn-Werkwijze.jpg");
+    background-image: url("../images/Sync-Development-Alphen-ad-Rijn-Werkwijze-banner.svg");
 
     /* Set a specific height */
     min-height: 300px; 
