--- a/bootstrap.css
+++ b/bootstrap.css
@@ -5783,9 +5783,9 @@ button.close {
 .carousel-inner > .item {
   position: relative;
   display: none;
-  -webkit-transition: .6s ease-in-out left;
-       -o-transition: .6s ease-in-out left;
-          transition: .6s ease-in-out left;
+  -webkit-transition: 1s ease-in-out left;
+       -o-transition: 1s ease-in-out left;
+          transition: 1s ease-in-out left;
 }
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
@@ -5823,10 +5823,10 @@ button.close {
 }
 .carousel-control {
   position: absolute;
-  top: 0;
-  bottom: 0;
+  top: 20px;
+  bottom: 20px;
   left: 0;
-  width: 15%;
+  width: 20%;
   font-size: 20px;
   color: #fff;
   text-align: center;
@@ -6607,10 +6607,10 @@ button.close {
 
 /* slider*/
 .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
-    display: block;
-    width: 100%;
-    max-height: 550px;
-    margin-left: 0%;
+   display: block;
+    width: 85%;
+    max-height: 400px;
+    margin-left: 7%;
     margin-top: 1%;
 }
     
